fixed spacing on contact section

--- a/home/static/home/css/main.css
+++ b/home/static/home/css/main.css
@@ -133,7 +133,7 @@ h2 {
     animation: fadeIn 1s;
 } 
 #contact_modal span, a{
-    padding-top: 2%;
+    padding-top: 3.7%;
     padding-bottom: 2%;
     color: ivory;
     font-family: 'Amatic SC', cursive;
